2014-09-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/annotate.c (AnnotateImage): An empty text string should
	not be treated as an error.  Resolves Debian bug 759956.

2014-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c: Added a new define called tiff:ignore-tags that
	can be used to ignore tags in 'corrupted' files with unknown and
	invalid tags. Without this patch the file cannot be read and
	raises an error. Patch by Dirk Lemstra via SF patches #40.

	* magick/type.c (ReadTypeConfigureFile): Support reading type
	configuration file from Windows resource. Patch by Dirk Lemstra
	via SF patches #32.

	* Magick++/lib/Magick++/STL.h: Fixed code analysis warning in
	STL.h. Patch by Dirk Lemstra via SF patches #32.

	* Magick++/lib/Magick++/Include.h: Autolink WebP in Visual
	Studio. Patch by Dirk Lemstra via SF patches #32.

2014-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c (WritePSDImage): Fix small stack over-write if more
	than 99 layers are written to PSD format.  Similar to
	CVE-2014-1947 for ImageMagick.  Changed layer naming to use at
	least 4 digits.  Issue was brought to our attention by Rex Dieter
	and change is mostly based on his patch.

2014-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enum_strings.c (StringToCompositeOperator): Support
	composite operator names similar to the major brand, without
	losing any compatibility with previous naming.

2014-08-23  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
	* coders/png.c: Fixed handling of transparency when writing
	indexed PNG. Reference: SourceForge Bug tracker [bugs:#267]
	Transparency lost when converting from GIF to PNG.

2014-08-17  Jaroslav Fojtik  <JaFojtik@seznam.cz>

        * VisualMagick\configure\configure.cpp Remove webp when attempting
	to compile with Visual Studio 6.

2014-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update for 1.3.20 release.
