@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020140926"
-#define public MagickPackageReleaseDate "snapshot-20140926"
+#define public MagickPackageVersionAddendum ".020141004"
+#define public MagickPackageReleaseDate "snapshot-20141004"
