@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2009-2013 GraphicsMagick Group
+% Copyright (C) 2009-2014 GraphicsMagick Group
 %
 % This program is covered by multiple licenses, which are described in
 % Copyright.txt. You should have received a copy of Copyright.txt with this
@@ -13,6 +13,7 @@
 */
 
 #include "magick/studio.h"
+#include "magick/random-private.h"
 #include "magick/random.h"
 #include "magick/semaphore.h"
 #include "magick/tsd.h"
