@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2014-10-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/tiff.c (TIFFIgnoreTags): Avoid warning about unused
+strtol() return value on Linux.</li>
+<li>magick/random-private.h (&quot;C&quot;): Move random inlined
+implementation bits to random-private.h, which is not installed,
+or used outside of the core C library.</li>
+</ul>
+</blockquote>
 <p>2014-09-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
@@ -87,12 +97,10 @@ Transparency lost when converting from GIF to PNG.</li>
 </dl>
 <p>2014-08-17  Jaroslav Fojtik  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;seznam&#46;cz">JaFojtik<span>&#64;</span>seznam<span>&#46;</span>cz</a>&gt;</p>
 <blockquote>
-<blockquote>
-* VisualMagickconfigureconfigure.cpp Remove webp when attempting</blockquote>
-<div class="system-message">
-<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">/home/bfriesen/src/graphics/GM/www/Changelog.rst</tt>, line 45)</p>
-Block quote ends without a blank line; unexpected unindent.</div>
-<p>to compile with Visual Studio 6.</p>
+<ul class="simple">
+<li>VisualMagickconfigureconfigure.cpp Remove webp when attempting
+to compile with Visual Studio 6.</li>
+</ul>
 </blockquote>
 <p>2014-08-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
